Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32545

<Home> and <End> keys don't work in Terminal

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • Qt Creator 16.0.0
    • Qt Creator 15.0.1, Qt Creator 16.0.0-rc1
    • Terminal
    • Ubuntu 24.04
    • 2bc6d84b6 (16.0)

      1. Open Creator's built-in Terminal (Alt+5).
      2. Type something on the input line.
      3. Try pressing keys <Home> or <End>.
        Expected: Cursor jumps to beginning of line or the end, respectively.
        Actual: Nothing happens, regardless of the state of the "Creator shortcuts" toggle.

        For Gerrit Dashboard: QTCREATORBUG-32545
        # Subject Branch Project Status CR V

            madwinter Marcus Tillmanns
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes