Terminal: Remove Home/End handling

It seems that people expect Home/End to jump to start/end of line.
This change removes the handling of the keys so the underlying
shell can handle them themselves.

Fixes: QTCREATORBUG-32545
Change-Id: I7503e85a57b15b231260759eb62cc8e71d4b6150
Reviewed-by: Cristian Adam <cristian.adam@qt.io>